--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "activationCommands": {
     "atom-workspace": "atom1122:toggle"
   },
-  "repository": "https://github.com/atom/atom1122",
+  "repository": "https://github.com/GoDIsElsawITHs/atom1122",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
